# velib-forecast

./: .gitignore  README.md  pyproject.toml
api/: api.py
artifacts/v0_1/: feat_cols_delta.json  metrics.csv  sample_features.csv
artifacts/v0_2_weather/: config.json  feat_cols_delta.json  metrics.csv  sample_features.csv
notebooks/: new_velib.ipynb  velib_ml_baseline.ipynb  velib_ml_test.ipynb  velib_v01.ipynb
scripts/: collect_velib_gbfs.py  fetch_weather.py  prepare_from_snapshots.py  train.py
src/velib_ml/: __init__.py  config.py  data.py  features.py  inference.py  io_utils.py  splits.py  training.py  weather.py
src/velib_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
velib-forecast-starter-S1/: README.md  requirements.txt
velib-forecast-starter-S1/features/: spark_ingest_features.py
velib-forecast-starter-S1/ml/: baseline.py  baseline_old.py
velib-forecast-starter-S1/tests/: test_baseline.py
velib-gbfs-collector/: README.md
