[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "velib-ml"
version = "0.1.0"
description = "Velib availability forecasting with ML and FastAPI"
authors = [
    { name = "Sarkis Chichkoyan"}
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "lightgbm",
    "fastapi",
    "uvicorn[standard]",
    "requests",
    "mlflow",
    "jupyter",
    # Optional extras
    "pyarrow",
    "pyspark"
]